--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
   <title>Akiraka</title>
 </head>
 <body style="background-color: #2f2f2f;">
-  <img src="banner.png" alt="AkirakaMC">
+  <div style="position: relative; width: 100%; height: 100%; border: 1px solid #2f2f2f;">
+    <img src="banner.png" style="position: relative; width: 100%; height: 100%;">
+  </div>
 </body>
