--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Akiraka</title>
 </head>
 <body style="background-color: #2f2f2f;">
-  <div style="position: relative; width: 100%; height: 100%; border: 1px solid #2f2f2f;">
-    <img src="banner.png" style="position: relative; width: 100%; height: 100%;">
+  <div style="position: relative; width: 100%; height: 100%;">
+    <img src="./banner.png" style="position: relative; width: 90%; height: 90%; top: 50%; left: 50%; transform: translate(-50%, -0%);">
   </div>
 </body>
